tests/fixtures/invalid/struct_array_variable_initializer_too_long.c
struct Point {
    int x;
    int y;
};

int main() {
    struct Point points[1] = {{1, 2}, {3, 4}};
    return points[0].x;
}
